Update SecurityConfig